--- a/Code/EasyLease/pom.xml
+++ b/Code/EasyLease/pom.xml
@@ -41,6 +41,11 @@
             <version>8.0.22</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
     </dependencies>
 
     <build>
