--- a/Code/EasyLease/pom.xml
+++ b/Code/EasyLease/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>javax.mail</artifactId>
             <version>1.6.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.6.28</version>
+        </dependency>
     </dependencies>
 
     <build>
