--- a/Code/EasyLease/pom.xml
+++ b/Code/EasyLease/pom.xml
@@ -41,8 +41,12 @@
             <version>8.0.22</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.6.28</version>
+        </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
