--- a/Code/EasyLease/pom.xml
+++ b/Code/EasyLease/pom.xml
@@ -46,5 +46,10 @@
             <artifactId>mockito-core</artifactId>
             <version>3.6.28</version>
         </dependency>
+            <dependency>
+                <groupId>com.sun.mail</groupId>
+                <artifactId>javax.mail</artifactId>
+                <version>1.6.2</version>
+            </dependency>
     </dependencies>
 </project>
