--- a/Code/EasyLease/pom.xml
+++ b/Code/EasyLease/pom.xml
@@ -67,7 +67,8 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
-
+        </dependency>
+        <dependency>
             <groupId>org.apache.struts</groupId>
             <artifactId>struts-core</artifactId>
             <version>1.3.8</version>
