--- a/Code/EasyLease/pom.xml
+++ b/Code/EasyLease/pom.xml
@@ -62,5 +62,10 @@
             <version>1.3.8</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.141.59</version>
+        </dependency>
     </dependencies>
 </project>
